--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 /* fonts here */
+@import url('https://fonts.googleapis.com/css2?family=Quintessential&display=swap');
 
 body {
     margin: 0;
@@ -6,16 +7,28 @@ body {
     border: none;
     font-size: 1.2rem;
     font-family: 'Times New Roman', Times, serif;
-    background: url('../images/pexels-photo-4974915.jpeg') no-repeat center center;
-    background-color: #4392F1;
-    background-blend-mode: difference;
 }
 
 /* navigational links - menu bar */
 header {
     width: 100%;
     height: 60px;
+    font-family: 'Quintessential', cursive;
+    font-weight: 600;
     background-color: #102542;
+}
+
+.main-logo {
+    width: 40px;
+    height: 40px;
+    text-decoration: none;
+    color: #F87060;
+    position: absolute;
+    margin: 10px 0 0 10px;
+}
+
+.main-logo:hover {
+    color: #FFFFFF;
 }
 
 nav ul {
@@ -26,7 +39,8 @@ nav ul {
 nav ul li {
     display: inline;
     float: left;
-    padding: 0 50px;
+    padding: 0 25px;
+    letter-spacing: 2px;
 }
 
 nav ul li a {
@@ -37,6 +51,7 @@ nav ul li a {
 nav ul li a:hover {
     color: #FFFFFF;
 }
+
 
 /* footer and links */
 
