--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,7 @@ body {
     margin: 0;
     padding: 0;
     border: none;
+    overflow-x: hidden;
     font-size: 1.2rem;
     font-family: 'EB Garamond', serif;
     background-color: var(--light-gray);
@@ -31,6 +32,7 @@ header {
     font-family: 'Merriweather', serif;
     font-weight: 600;
     background-color: var(--lavender);
+    border-bottom: 3px outset var(--violet);
 }
 
 nav {
@@ -49,6 +51,7 @@ footer {
     position: absolute;
     bottom: 0;
     background-color: var(--violet);
+    border-top: 2px inset var(--lavender);
     display: flex;
     flex-wrap: nowrap;
     align-content: center;
