--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 /* fonts here */
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;600&family=Merriweather:wght@300;700&display=swap');
 
+/* -----------------------------------------------------defaults */
 :root {
     --red: #F15025;
     --White: #FFFFFF;
@@ -27,6 +28,7 @@ body {
 header {
     width: 100%;
     height: 60px;
+    max-height: 10vh;
     position: absolute;
     top: 0;
     font-family: 'Merriweather', serif;
@@ -44,10 +46,18 @@ nav ul {
     list-style-type: none;
 }
 
+.hidden-v {
+    visibility: hidden;
+}
+
+.hidden-d {
+    display: none;
+}
 /* footer and links */
 
 footer {
     width: 100%;
+    max-height: 10vh;
     position: absolute;
     bottom: 0;
     background-color: var(--violet);
@@ -65,6 +75,7 @@ footer {
 .author-credit {
     float: left;
     font-size: 1.2rem;
+    font-weight: 600;
 }
 
 footer ul {
@@ -86,3 +97,31 @@ footer a:hover {
     color: var(--red);
 }
 
+/* ------------- Main body */
+main {
+    width: 100%;
+}
+
+#inside-main {
+    width: 100%;
+    position: absolute;
+    top: 10vh;
+
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+}
+
+.container-row {
+    width: 900px;
+    
+    display: flex;
+    flex-direction: row;
+}
+
+/* ------------------------------------------------- Added with JavaScript */
+
+h1#welcome-ani {
+    font-size: 4rem;
+}
