--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,6 @@ body {
     overflow-x: hidden;
     font-size: 1.2rem;
     font-family: 'EB Garamond', serif;
-    background-color: var(--light-gray);
 }
 
 header {
@@ -119,6 +118,18 @@ main {
     display: flex;
     flex-direction: row;
 }
+
+/*---------------------------- */
+
+#side-nav {
+    width: 10vw;
+    height: 100%;
+    position: absolute;
+    left: 0;
+}
+
+
+
 
 /* ------------------------------------------------- Added with JavaScript */
 
