--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,10 @@
 /* fonts here */
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;600&family=Great+Vibes&family=Merriweather:wght@300;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;600&family=Kaushan+Script&family=Merriweather:wght@300;700&display=swap');
 
 /* -----------------------------------------------------defaults */
 :root {
     --red: #F15025;
-    --White: #FFFFFF;
+    --White: #ffffff;
     --light-gray: #e6e8ee;
     --dark-gray: #ced0ce;
     --black: #191919;
@@ -33,7 +33,12 @@ header {
     border-bottom: 3px outset var(--violet);
     position: absolute;
     top: 0;
-    z-index: 2;
+    z-index: 4;
+
+    display: flex;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
 }
 
 .hidden-v {
@@ -52,13 +57,24 @@ header {
     float: right;
 }
 
-h1.my-name {
-    color: var(--black) !important;
-    font-size: 3.5rem;
-    font-family: 'Great Vibes', cursive;
-    letter-spacing: 4px;
+/*--------------------------------------------------------- header contents */
+#about-me {
+    color: var(--french-blue);
+    font-size: 1.2rem;
+    font-family: 'EB Garamond', serif;
+    font-weight: 900;
     position: absolute;
-    top: -35%;
+    width: 1000px;
+    list-style-type: none;
+    line-height: 50px;
+}
+
+.my-name {
+    color: var(--black) !important;
+    font-size: 2.5rem;
+    font-family: 'Kaushan Script', cursive;
+    position: absolute;
+    top: -55%;
     left: 50%;
     transform: translateX(-50%);
 
@@ -71,108 +87,103 @@ h1.my-name {
 
 @keyframes my-name {
     0%{
-        color: var(--white);
-        
+        color: var(--White);
     }
     100%{
         color: var(--white);
     }
-
 }
 
-#about-me {
+/*-------------------------------------------------------- left of screen */
+#left-display {
+    width: 33.3%;
+    height: 100%;
+    background-color: var(--light-gray);
     position: absolute;
-    width: 95%;
-    list-style-type: none;
+    top: 8vh;
 }
 
-/* ------------- Main body */
-main {
-    width: 100%;
-}
-
-#inside-main {
-    width: 100%;
+.profile-img {
+    width: 300px;
+    height: 300px;
     position: absolute;
-    z-index: -1;
-    top: 10vh;
+    top: 1vh;
+    left: 50%;
+    transform: translateX(-50%);
 
+    border: 10px inset var(--french-blue);
+    border-radius: 50%;
+}
+
+#tool-list {
+    width: 100%;
+    background-color: var(--White);
+    position: absolute;
+    top: 400px;
     display: flex;
     flex-wrap: wrap;
+
     align-content: center;
     justify-content: center;
 }
 
-.container-row {
-    width: 900px;
-
-    display: flex;
-    flex-direction: row;
+#tool-list h2 {
+    color: var(--french-blue);
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -170%);
 }
 
-/*---------------------------- side nav */
+#tool-list ul {
+    list-style-type: none;
+}
 
-#side-nav {
-    width: 100px;
+#tool-list li {
+    display: inline;
+}
+
+.tools {
+    height: 70px;
+    width: 70px;
+
+    border: 2px solid var(--lavender);
+    border-radius: 30%;
+}
+
+/*-------------------------------------------------------- middle of screen */
+
+#middle-display {
+    width: 33.3%;
     height: 100%;
-    font-size: 2rem;
-    background-color: var(--light-gray);
-    border-right: 2px inset var(--dark-gray);
+
     position: absolute;
     top: 8vh;
-    left: 0;
+    left: 33.3%;
 }
 
-#side-nav-list {
-    list-style-type: none;
+/*-------------------------------------------------------- right of screen */
 
+#right-display {
+    width: 33.4%;
+    height: 100%;
+    background-color: var(--lavender);
+    position: absolute;
+    top: 8vh;
+    left: 66.6%;
 }
-
-.side-items {
-    height: 60px;
-    margin-top: 7vh;
-    cursor: pointer;
-
-    display: block;
-}
-
-.side-items:hover {
-    color: var(--violet);
-    animation-name: bigger;
-    animation-duration: 0.15s;
-    animation-timing-function: ease-in;
-    animation-fill-mode: forwards;
-}
-
-@keyframes bigger {
-    from {
-        font-size: 2rem;
-    }
-    to {
-        transform: translateX(-8px);
-        font-size: 3rem;
-    }
-  }
-
-/* ----------------------------------------------------- Main middle */
-
 
 /* ------------------------------------------------- Added with JavaScript */
-
-h1.welcome-msg {
-    font-size: 4rem;
-}
-
 
 /* footer and links */
 
 footer {
     width: 100%;
     max-height: 10vh;
-    position: absolute;
-    bottom: 0;
-    background-color: var(--violet);
+    background-color: var(--french-blue);
     border-top: 2px inset var(--lavender);
+    position: fixed;
+    bottom: 0;
+
     display: flex;
     flex-wrap: nowrap;
     align-content: center;
@@ -180,13 +191,19 @@ footer {
 }
 
 .footer-container {
-    width: 700px;
+    width: 800px;
 }
 
 .author-credit {
+    color: var(--White);
     float: left;
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: 600;
+}
+
+.author-credit span {
+    font-size: 1.2rem;
+    font-family: 'Kaushan Script', cursive;
 }
 
 footer ul {
@@ -194,16 +211,13 @@ footer ul {
     float: right;
 }
 
-footer li {
+.footer-links {
+    color: var(--white);
     font-size: 1.8rem;
     margin: 5px;
     display: inline;
 }
 
-footer a {
-    color: var(--black);
-}
-
-footer a:hover {
-    color: var(--red);
+a {
+    color: var(--White);
 }
